<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gulf Oil</string>
    <string name="btn_forgetpass"> Forgot Password</string>
    <string-array name="array_name">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="btn_login">Login</string>
    <string name="edt_username_hint">Username</string>
    <string name="edt_password_hint">Password</string>
    <string name="Unique_id">Unique Id</string>
    <string name="edt_name_hint">Full Name</string>
    <string name="edt_mobile_hint">Mobile Number</string>
    <string name="edt_email_id_hint">Email Id</string>
    <string name="edt_password_signup_hint">Password</string>
    <string name="edt_confirm_pass_signup_hint">Confirm Password</string>
    <string name="btn_signup_text">SUBMIT</string>
    <string name="otp_enter">Enter OTP </string>
    <string name="otp_submit">Submit</string>
    <string name="edt_passwordold_hint">Old Password</string>
    <string name="edt_passwordnewconform_hint">Confirm New Password</string>
    <string name="edt_passwordnew_hint">New Password</string>
    <string name="you_are_not_updated_title">The app is not updated</string>
    <string name="you_are_not_updated_message">Press YES to update the app on Google Play, press NO to exit.</string>
    <string name="m_shop_name">Shop Name</string>
    <string name="m_shop_address_line1_name">Shop Address Line 1</string>
    <string name="m_shop_street_address">Shop Street Address(Complete Address)</string>
    <string name="m_shop_landmark">Shop Landmark</string>
    <string name="m_shop_pincode">Shop Pincode</string>
    <string name="m_shop_subdistrict">Shop Subdistrict</string>
    <string name="m_shop_city_name">Shop City/Town Name</string>
    <string name="m_shop_state">Shop State</string>
    <string name="m_alternate_mobile_number">Alternate Mobile number</string>
    <string name="m_shop_landline_number">Shop Landline No</string>
    <string name="m_email">Email</string>
    <string name="m_residential_address_line1">Residential Address Line 1</string>
    <string name="m_residential_address_line2">Residential Address Line 2</string>
    <string name="m_residential_landmark">Residential  Landmark</string>
    <string name="m_residential_pincode">Residential Pincode</string>
    <string name="m_residential_town">Residential City/Town Name</string>
    <string name="m_residential_state">Residential Address - State</string>
    <string name="m_marriage_anniversary_date">Marriage Anniversary Date</string>
    <string name="m_spouse_name">Spouse Name</string>
    <string name="m_retailer_gender">Dealer Gender</string>
    <string name="m_no_of_children">No of Children</string>
    <string name="m_lucky_draw_contest">Lucky Draw Consent</string>
    <string name="m_lucky_draw_question1">Which of these is a Gulf Synthetic Engine Oil?</string>
    <string name="m_lucky_draw_answer1">Lucky Draw Answer1</string>
    <string name="m_lucky_draw_question2"> Which of these products is a Ashok Leyland Co-branded engine oil?</string>
    <string name="m_communication_consent">Communication Consent</string>
    <string name="m_distributor_id">Distributor ID</string>
    <string name="m_distributor_name">Distributor Name</string>
    <string name="m_retailerId">Dealer ID:</string>
    <string name="m_first_name">Name of Dealer Proprietor</string>
    <string name="m_last_name">Last Name</string>
    <string name="m_gender">Gender </string>
    <string name="m_male">Male</string>
    <string name="m_female">Female</string>
    <string name="spn_state">State</string>
    <string name="spn_district">District</string>
    <string name="m_nominie_name">Nominee Name </string>
    <string name="m_nominie_relation">Relation To The Insured</string>
    <string name="m_mother_name">Mothers Maiden Name </string>
    <string name="m_workshopname">WorkShop Name</string>
    <string name="m_district">Shop District</string>
    <string name="m_pincode">Pincode </string>
    <string name="m_taluka">Taluka</string>
    <string name="m_village_city_town">Village / City / Town</string>
    <string name="m_shop_add">Shop Address</string>
    <string name="m_landmark">Landmark </string>
    <string name="m_ownerMobNo">Owner Mobile Number </string>
    <string name="m_emailAsddress">Email Address</string>
    <string name="m_dateofBirth">Date of Birth</string>
    <string name="m_registrationfillDate">Registration Filling Date</string>
    <string name="m_sector">Sector </string>
    <string name="m_automotive">Automotive </string>
    <string name="m_tractor">Tractor</string>
    <string name="m_specialization">Specialization</string>
    <string name="m_engine">Engine</string>
    <string name="m_hydraulics">Hydraulics </string>
    <string name="m_transmission">Transmission</string>
    <string name="m_DentingPanting">Denting &amp; Painting</string>
    <string name="m_multiple">Multiple</string>
    <string name="m_reborer">Reborer </string>
    <string name="m_toatalSperConsumptioperMonth">Total Spare Consumption Per Month(INR) </string>
    <string name="m_sperpartconsuptionPErMonth">Spares Parts Consumption For M&amp;M Vehicles Per Month(INR)</string>
    <string name="m_mmgenuinesparespartsconsuptionPerMoth">M&amp;M Genuine Spares Parts Consumption Per Month</string>
    <string name="m_totalVehicalsperMonth">Total Vehicles/Month(Nos)</string>
    <string name="m_mahindraVehicalsperMonth">Mahindra Vehicles/Month(Nos)</string>
    <string name="m_noofMechanics">Number of Mechanics</string>
    <string name="msg_error">Error</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="button_ok">OK</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="result_text">Found plain text</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="m_membership_id">Dealer Code</string>
    <string name="m_workshop_name">Shop Name</string>
    <string name="name">Edit Registration</string>
    <string name="m_mobile_no">Mobile Number </string>
    <string name="mechanic_registration">DEALER REGISTRATION</string>
    <string name="product_code">Product Code : </string>
    <string name="product_name">Product Name : </string>
    <string name="points">Points : </string>
    <string name="description">Description</string>
    <string name="kyc_pending">YOUR KYC IS PENDING</string>
    <string name="kyc_pending_message">As per 194 R of TDS law, TDS of is applicable on all your redemptions of rewards.\n\n Complete your KYC now and allow 10% TDS or 20% TDS will be deducted on your Unnati redemptions. </string>
    <string name="yes_kyc">"Yes, wish to complete "</string>
    <string name="no_kyc">No, don\'t wish to complete KYC</string>
</resources>