<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unnati_mandala_art_background"
    tools:context=".CheckKYCActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingTop="24dp"
            android:paddingRight="@dimen/padding_16dp"
            android:paddingBottom="24dp">


            <TextView
                android:id="@+id/tvLoginTitle"
                style="@style/heading_1"
                android:gravity="center"
                android:text="@string/kyc_pending"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/kyc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kyc_pending_message"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update_kyc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/unnati_blue_button"
                android:clickable="true"
                android:text="@string/yes_kyc" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dont_updated_kyc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/unnati_blue_button"
                android:clickable="true"
                android:layout_marginTop="20dp"
                android:text="@string/no_kyc" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>