<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/royalty_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:id="@+id/iv_product_image" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <TableRow android:background="@drawable/royalty_gold_border" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
                    <TextView android:textSize="14dp" android:textStyle="bold" android:textColor="@color/gold_color" android:gravity="center" android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/product_code"/>
                    <TextView android:textSize="13dp" android:textColor="@color/gold_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_product_code" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/product_code"/>
                </LinearLayout>
                <TextView android:background="@color/gold_color" android:layout_width="1dp" android:layout_height="match_parent"/>
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
                    <TextView android:textSize="14dp" android:textStyle="bold" android:textColor="@color/gold_color" android:gravity="center" android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/product_name"/>
                    <TextView android:textSize="13dp" android:textColor="@color/gold_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_product_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/product_name"/>
                </LinearLayout>
                <TextView android:background="@color/gold_color" android:layout_width="1dp" android:layout_height="match_parent"/>
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
                    <TextView android:textSize="14dp" android:textStyle="bold" android:textColor="@color/gold_color" android:gravity="center" android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/points"/>
                    <TextView android:textSize="13dp" android:textColor="@color/gold_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_points" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/points"/>
                </LinearLayout>
            </TableRow>
            <TextView android:textSize="14dp" android:textStyle="bold" android:textColor="@color/gold_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_top_button" android:text="@string/description"/>
            <TextView android:textSize="13dp" android:textStyle="bold" android:textColor="@color/gold_color" android:id="@+id/tv_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_top_button" android:layout_marginRight="@dimen/margin_top_button" android:layout_marginBottom="@dimen/margin_top_button" android:text="@string/description" android:lineSpacingExtra="3dp"/>
            <WebView android:id="@+id/mywebview" android:background="@color/gold_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_top_button" android:layout_marginRight="@dimen/margin_top_button" android:layout_marginBottom="@dimen/margin_top_button"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
